--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <title>Login System</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link rel="stylesheet" href="./style.css" />
+        <title>Login Page</title>
     </head>
     <body>
-        <h1>First Try</h1>
+        <h1>Sign In</h1>
+        <input type="text" name="name" autocomplete="off" required />
+        <label for="name" class="label-name">
+            <span class="content-name">Name</span>
+        </label>
     </body>
 </html>
