--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,12 @@
     </head>
     <body>
         <h1>Sign In</h1>
-        <input type="text" name="name" autocomplete="off" required />
-        <label for="name" class="label-name">
-            <span class="content-name">Name</span>
-        </label>
+        
+        <div class="form">
+            <input type="text" name="name" autocomplete="off" required />
+            <label for="name" class="label-username">
+                <span class="content-username">Username</span>
+            </label>
+        </div>
     </body>
 </html>
