--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,19 @@
     </head>
     <body>
         <h1>Sign In</h1>
-        
         <div class="form">
-            <input type="text" name="name" autocomplete="off" required />
-            <label for="name" class="label-username">
-                <span class="content-username">Username</span>
-            </label>
+            <div class="username">
+                <input type="text" name="name" autocomplete="off" required />
+                <label for="name" class="label-username">
+                    <span class="content-username">Username</span>
+                </label>
+            </div>
+            <div class="password">
+                <input type="text" name="name" autocomplete="off" required />
+                <label for="name" class="label-password">
+                    <span class="content-password">Password</span>
+                </label>
+            </div>
         </div>
     </body>
 </html>
