--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
                 </label>
             </div>
             <div class="password">
-                <input type="text" name="name" autocomplete="off" required />
+                <input type="password" name="name" autocomplete="off" required />
                 <label for="name" class="label-password">
                     <span class="content-password">Password</span>
                 </label>
