--- a/public/index.html
+++ b/public/index.html
@@ -9,19 +9,23 @@
   </head>
 
   <body>
-    <h1>Sign In</h1>
-    <div class="form">
-      <div class="username">
+    <div class="login-box">
+      <h1>Login</h1>
+      <div class="textbox">
         <input type="text" name="name" autocomplete="off" required />
-        <label for="name" class="label-username">
-          <span class="content-username">Username</span>
+        <label for="name" class="label-textbox">
+          <span class="content-textbox">Username</span>
         </label>
       </div>
-      <div class="password">
+      <div class="textbox" style="top: 20px;">
         <input type="password" name="name" autocomplete="off" required />
-        <label for="name" class="label-password">
-          <span class="content-password">Password</span>
+        <label for="name" class="label-textbox">
+          <span class="content-textbox">Password</span>
         </label>
+      </div>
+      <input class="logbtn" type="submit" name="" value="Login" />
+      <div class="bottom-text">
+        Don't have account? <a href="#">Sign up</a>
       </div>
     </div>
   </body>
