working on modal

--- a/public/index.html
+++ b/public/index.html
@@ -9,23 +9,36 @@
   </head>
 
   <body>
+    <!-- Login Box -->
     <div class="login-box">
       <h1>Login</h1>
+      <!-- Username Block -->
       <div class="textbox">
         <input type="text" name="name" autocomplete="off" required />
         <label for="name" class="label-textbox">
           <span class="content-textbox">Username</span>
         </label>
       </div>
+      <!-- Password Block -->
       <div class="textbox" style="top: 20px;">
         <input type="password" name="name" autocomplete="off" required />
         <label for="name" class="label-textbox">
           <span class="content-textbox">Password</span>
         </label>
       </div>
+      <!-- Login Button -->
       <input class="logbtn" type="submit" name="" value="Login" />
+      <!-- Create Account -->
       <div class="bottom-text">
         Don't have account? <a href="#">Sign up</a>
+      </div>
+    </div>
+
+      <!-- The Modal-->
+    <div id="register-modal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+
       </div>
     </div>
   </body>
