--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link rel="stylesheet" href="./style.css" />
-        <title>Login Page</title>
-    </head>
-    <body>
-        <h1>Sign In</h1>
-        <div class="form">
-            <div class="username">
-                <input type="text" name="name" autocomplete="off" required />
-                <label for="name" class="label-username">
-                    <span class="content-username">Username</span>
-                </label>
-            </div>
-            <div class="password">
-                <input type="password" name="name" autocomplete="off" required />
-                <label for="name" class="label-password">
-                    <span class="content-password">Password</span>
-                </label>
-            </div>
-        </div>
-    </body>
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -71,7 +45,7 @@
         <h1>Create Account</h1>
         <form action="/register" method="POST">
           <input class="info-box" name="username" type="text" placeholder="Account Name">
-          <input class="info-box" name="passowrd" type="text" placeholder="Password">
+          <input class="info-box" name="password" type="text" placeholder="Password">
           <input class="info-box" name="serial-number" type="text" placeholder="Serial Number #">
           <input class="register-btn" type="submit" name="" value="register" />
         </form>
@@ -80,5 +54,4 @@
 
     <script src="signUpModal.js"></script>
   </body>
->>>>>>> 9108592a71bc1461f2c30ac81410b65c62d2e7d0
 </html>
