Add user input validation check

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         <form action="/register" method="POST">
           <input class="info-box" name="username" type="text" placeholder="Account Name">
           <input class="info-box" name="password" type="text" placeholder="Password">
-          <input class="info-box" name="serial-number" type="text" placeholder="Serial Number #">
+          <input class="info-box" name="reEnterPassword" type="text" placeholder="Reenter Password">
           <input class="register-btn" type="submit" name="" value="register" />
         </form>
       </div>
